// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineButton disabled prop sets 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: default;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  color: #e8f2ff;
  box-shadow: inset 0 0 0 2px #e8f2ff;
  background-color: transparent;
  font-size: 14px;
  padding: 9.5px 18px;
}

.c0:hover {
  background-color: transparent;
}

<button
  className="c0"
  color="primary"
  disabled={true}
/>
`;

exports[`OutlineButton renders 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  color: #007aff;
  box-shadow: inset 0 0 0 2px #007aff;
  background-color: transparent;
  font-size: 14px;
  padding: 9.5px 18px;
}

.c0:hover {
  background-color: transparent;
  color: #049;
  box-shadow: inset 0 0 0 2px #049;
}

<button
  className="c0"
  color="primary"
/>
`;

exports[`OutlineButton without disabled prop sets 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  color: #007aff;
  box-shadow: inset 0 0 0 2px #007aff;
  background-color: transparent;
  font-size: 14px;
  padding: 9.5px 18px;
}

.c0:hover {
  background-color: transparent;
  color: #049;
  box-shadow: inset 0 0 0 2px #049;
}

<button
  className="c0"
  color="primary"
/>
`;
